(fix) Show entire gear icon when menu is collapsed. Pull request amended as per my [conversation](https://github.com/jan-molak/jenkins-build-monitor-plugin/pull/106) with @mattjmorrison
Addresses #106

--- a/src/main/webapp/themes/industrial.css
+++ b/src/main/webapp/themes/industrial.css
@@ -515,14 +515,13 @@ h2 {
     right:8px;
     width:32px;
     overflow: hidden;
-    margin: 0;  padding: 0.5em;
+    margin: 0;  padding: 5px;
     background: rgba(57, 57, 57, 0.9);
     border-radius: 5px;
     opacity:0.5;
 
     -webkit-transition: all 0.25 ease-in;
     transition: all 0.25s ease-in;
-    min-width: 48px;
 }
 .build-monitor nav:hover {
     opacity:1.0;
